--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,16 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+{{!-- app/templates/application.hbs --}}
 
-{{outlet}}
+<div class='container'>
+  <div class="menu">
+
+    {{#if session.isAuthenticated}}
+      <a {{action 'invalidateSession'}}>Logout</a>
+    {{else}}
+      {{#link-to 'login'}}Login{{/link-to}}
+    {{/if}}
+  </div>
+  <div class="main">
+    {{outlet}}
+  </div>
+</div>
+
