--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -1,21 +1,21 @@
-<div class='row'>
+<div class="row">
 
   {{outlet}}
   {{!-- app/templates/login.hbs --}}
 
-  <form {{action 'authenticate' on='submit'}}>
+  <form {{action "authenticate" on="submit"}}>
 
-    <div class='form-group'>
+    <div class="form-group">
       <label for="identification">Login</label>
-      {{input id='identification' placeholder='Enter Login' value=identification}}
+      {{input placeholder="Enter Login" value=identification}}
     </div>
 
-    <div class='form-group'>
+    <div class="form-group">
       <label for="password">Password</label>
-      {{input id='password' placeholder='Enter Password' type='password' value=password}}
+      {{input placeholder="Enter Password" type="password" value=password}}
     </div>
 
-    <div class='form-group'>
+    <div class="form-group">
       <button type="submit">Login</button>
       {{#if errorMessage}}
         <p>{{errorMessage}}</p>
