--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -7,12 +7,7 @@
 
     <div class="form-group">
       <label for="identification">Login</label>
-      {{input placeholder="Enter Login" value=identification}}
-    </div>
-
-    <div class="form-group">
-      <label for="password">Password</label>
-      {{input placeholder="Enter Password" type="password" value=password}}
+      {{input placeholder="Sudo Key" value=identification}}
     </div>
 
     <div class="form-group">
