--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -7,3 +7,14 @@ a.logout-link {
   float: right;
   text-align: right;
 }
+
+.login-form {
+  padding:2em;
+  border: 2px #ccc;
+  background-color: #aaa;
+  margin-top: 10em;
+}
+
+.login-form .col-md-4 {
+  margin-top: 4em;
+}
