--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -15,8 +15,10 @@
 
   <div class="main">
 
-    <div class='row'>
+    <div class='container-fluid'>
+
       {{outlet}}
+
     </div>
   </div>
   
