--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -9,7 +9,10 @@
       <li>{{#link-to "accounts"}}Accounts{{/link-to }}</li>
       <li>{{#link-to "invoices"}}Invoices{{/link-to }}</li>
       <li>{{#link-to "forwards"}}Payment Forwards{{/link-to }}</li>
+      <li>{{#link-to "coins"}}Coins Management{{/link-to }}</li>
 
     </ul>
+
   </div>
+
 </div>
