passing linting issues in tests

--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -3,18 +3,21 @@
 
 <div class="container">
 
-<div class='row'>
-  <div class='search-input'>
-    <h2>Search Invoice</h2>
+  <div class="row">
+    <div class="search-input">
+      <h2>Search Invoice</h2>
 
-  <form {{action "searchInvoice" on="submit"}}>
-    {{input type='search' class='form-control ' placeholder='search invoice uid'
-    value=invoice_uid}}
-  </form>
+      <form {{action "searchInvoice" on="submit"}}>
+        {{input
+          type="search"
+          class="form-control"
+          placeholder="search invoice uid"
+          value=invoice_uid
+        }}
+      </form>
+    </div>
+
   </div>
-
-</div>
-<br/>
 
   <div class="row">
 
