--- a/app/templates/forwards.hbs
+++ b/app/templates/forwards.hbs
@@ -2,7 +2,7 @@
 
 <h2>Payment Forwards</h2>
 
-<table class='table table-striped'>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Input Currency</th>
@@ -11,17 +11,20 @@
       <th>Output Address</th>
     </tr>
   </thead>
-<tbody>
-{{#each model as |forward|}}
-  <tr>
-    <td>{{forward.input_currency}}</td>
-    <td>
-      {{#link-to "forward" forward}}{{forward.input_address}}{{/link-to}}
-    </td>
-    <td>{{forward.output_currency}}</td>
-    <td>{{forward.output_address}}</td>
-  </tr>
-{{/each}}
-</tbody>
+
+  <tbody>
+
+    {{#each model as |forward|}}
+      <tr>
+        <td>{{forward.input_currency}}</td>
+        <td>
+          {{#link-to "forward" forward}}{{forward.input_address}}{{/link-to}}
+        </td>
+        <td>{{forward.output_currency}}</td>
+        <td>{{forward.output_address}}</td>
+      </tr>
+    {{/each}}
+
+  </tbody>
 </table>
 
