--- a/app/templates/invoice.hbs
+++ b/app/templates/invoice.hbs
@@ -2,11 +2,11 @@
 
 <h2>Invoice</h2>
 
-<div class='row'>
+<div class="row">
 
   <div>
 
-    <table class='table table-striped'>
+    <table class="table table-striped">
 
       <tbody>
 
@@ -39,7 +39,7 @@
     </table>
 
     <h3>Input</h3>
-    <table class='table table-striped'>
+    <table class="table table-striped">
 
       <tbody>
 
@@ -68,7 +68,7 @@
 
     <h3>Output</h3>
 
-    <table class='table table-striped'>
+    <table class="table table-striped">
       <tbody>
         <tr>
           <td>Output Address</td>
