List locked addresses in sudo admin

--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -24,6 +24,7 @@
     <ul>
 
       <li><h3>{{#link-to "accounts"}}Accounts{{/link-to }}</h3></li>
+      <li><h3>{{#link-to "addresses"}}Addresses{{/link-to }}</h3></li>
       <li><h3>{{#link-to "invoices"}}Invoices{{/link-to }}</h3></li>
       <li><h3>{{#link-to "forwards"}}Payment Forwards{{/link-to }}</h3></li>
       <li><h3>{{#link-to "coins"}}Coins Management{{/link-to }}</h3></li>
