search for account by email and display details

--- a/app/templates/account.hbs
+++ b/app/templates/account.hbs
@@ -1,1 +1,10 @@
 {{outlet}}
+
+<p>Email: {{account.email}}</p>
+
+<p>Buiness Address: {{account.physical_address}}</p>
+
+<p>Business Name: {{account.business_name}}</p>
+
+<p>Latitude, Longitude: {{account.latitude}}, {{account.longitude}}</p>
+
