--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -32,3 +32,17 @@ h1.app-title {
 .search-account {
   padding: 3em;
 }
+
+.edit-account-link a {
+
+  color: black;
+  display: block;
+
+}
+
+.edit-account {
+
+  border: 1px solid #ccc;
+  padding: 2em;
+
+}
