fix ember build errors

--- a/app/templates/accounts.hbs
+++ b/app/templates/accounts.hbs
@@ -2,7 +2,7 @@
 
 <h2>Accounts</h2>
 
-<div class='row search-account'>
+<div class="row search-account">
 
   <form {{action "searchAccountEmail" on="submit"}}>
 
@@ -10,13 +10,13 @@
 
     {{input value=accountSearchEmail}}
 
-    <input type='submit'/>
+    {{input type="submit"}}
 
   </form> 
 
 </div>
 
-<div class='row'>
+<div class="row">
 
   <table class="table table-striped">
     <thead>
