--- a/app/templates/accounts/edit.hbs
+++ b/app/templates/accounts/edit.hbs
@@ -1,18 +1,19 @@
 {{outlet}}
 
-<div class='row edit-account'>
+<div class="row edit-account">
 
-<form {{action "save" on="submit"}}>
+  <form {{action "save" on="submit"}}>
 
-  <p>Email: {{account.email}}</p>
+    <p>Email: {{account.email}}</p>
 
-  <p>Buiness Address: {{input value=accountUpdate.physical_address}}</p>
+    <p>Buiness Address: {{input value=accountUpdate.physical_address}}</p>
 
-  <p>Business Name: {{input value=accountUpdate.business_name}}</p>
+    <p>Business Name: {{input value=accountUpdate.business_name}}</p>
 
-  <p>Latitude, Longitude: {{input value=accountUpdate.latitude}}, {{input value=accountUpdate.longitude}}</p>
+    <p>Latitude, Longitude: {{input value=accountUpdate.latitude}}, {{input value=accountUpdate.longitude}}</p>
 
-  <input type='submit'/>
+    <input type="submit">
 
-</form>
+  </form>
+
 </div>
