button to generate wire report from invoice

--- a/app/templates/invoice.hbs
+++ b/app/templates/invoice.hbs
@@ -2,6 +2,12 @@
 
 <h2>Invoice</h2>
 
+<h3>
+
+<button><a target="_blank" href="https://api.anypay.global/sudo/wires/reportsinceinvoice/{{invoice.uid}}">Generate Wire Report</a></button>
+
+</h3>
+
 <div class="row">
 
   <div>
