fix template compilation

--- a/app/templates/invoice.hbs
+++ b/app/templates/invoice.hbs
@@ -4,7 +4,13 @@
 
 <h3>
 
-<button><a target="_blank" href="https://api.anypay.global/sudo/wires/reportsinceinvoice/{{invoice.uid}}">Generate Wire Report</a></button>
+  <button
+    target="_blank"
+    rel="noopener"
+    href="https://api.anypay.global/sudo/wires/reportsinceinvoice/{{invoice.uid}}"
+  >
+    Generate Wire Report
+  </button>
 
 </h3>
 
