convert button to link

--- a/app/templates/invoice.hbs
+++ b/app/templates/invoice.hbs
@@ -4,13 +4,14 @@
 
 <h3>
 
-  <button
+  <a
     target="_blank"
+    class="btn btn-large btn-positive"
     rel="noopener"
     href="https://api.anypay.global/sudo/wires/reportsinceinvoice/{{invoice.uid}}"
   >
     Generate Wire Report
-  </button>
+  </a>
 
 </h3>
 
